Bug on Firefox with the antispam's input

--- a/assets/scss/layers/4-elements/_forms.scss
+++ b/assets/scss/layers/4-elements/_forms.scss
@@ -9,7 +9,7 @@ form {
 	align-items: flex-start;
 }
 	input[name="username"] {
-		position: absolute;
+		position: fixed;
 		top: -1000px;
 	}
 	input[type="text"],
